--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/O-clock-Valhalla/projet-11-ldo-transports-back/issues"
   },
-  "homepage": "https://github.com/O-clock-Valhalla/projet-11-ldo-transports-back#readme"
+  "homepage": "https://github.com/O-clock-Valhalla/projet-11-ldo-transports-back#readme",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.7.1"
+  }
 }
