--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
   }
 }
