--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.1.0",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
   }
