--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-jwt": "^6.1.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "redis": "^3.1.2"
