--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
-    "redis": "^3.1.2"
+    "redis": "^3.1.2",
+    "sanitize-html": "^2.5.3"
   }
 }
