--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": "12.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha test",
+    "coverage": "nyc --reporter=html npm run test",
     "start": "node server.js"
   },
   "repository": {
@@ -34,5 +35,10 @@
     "pg": "^8.7.1",
     "redis": "^3.1.2",
     "sanitize-html": "^2.5.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0"
   }
 }
